--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="7bAq_nKvLx6Fl_9jqKy71bSyhE0q48-_Xg5JFffprd8" />
+    <meta name="description" content="Discover the latest movie details, watch trailers, and get personalized recommendations.">
+    <meta property="og:title" content="Moovie Hub">
+    <meta property="og:description" content="Discover the latest movie details, watch trailers, and get personalized recommendations.">
+    <meta property="og:url" content="https://mooviehub.com">    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <title>Moovies</title>
+    <title>Moovies Hub</title>
   </head>
   <body>
     <div id="root"></div>
