--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <Script 
-          src="https://announcify.app/widget.js"
-          data-project-id="cmltqd5o3000017mio47dusjz"
-          data-api-base="https://announcify.app"
-        />
+    <script 
+  src="https://announcify.app/widget.js" 
+  data-project-id="cmltqd5o3000017mio47dusjz"
+  data-api-base="https://announcify.app"
+></script>
   </body>
 </html>
